HW10 Add XML serialization